[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
actix-http = "3.3.1"
actix-rt = "2.8.0"
reqwest = "0.11.14"
tokio = "1.26.0"
